--- a/templates/dm.html
+++ b/templates/dm.html
@@ -9,8 +9,8 @@
                   class="card_font" style="text-transform: capitalize;">{{user.first_name}} {{user.last_name}}</span></a></div>
             <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
                   class="card_font">Arkadaşlar</span></a></div>
-            <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
-                  class="card_font">Gruplar</span></a></div>
+            <!-- <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
+                  class="card_font">Gruplar</span></a></div> -->
             <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/application.png' %}" alt="" class="mr-2"><span
                   class="card_font">Ayarlar Ve Gizlilik</span></a></div>
           </div>
