--- a/templates/platform.html
+++ b/templates/platform.html
@@ -1,18 +1,38 @@
 {% extends 'partials/_base.html' %}
 {% load static %}
     {% block content %}
+    {% for message in messages %}
+      <h5>{{message}}</h5>
+    {% endfor %}
     <div class="container mt-4">
       <div class="row">
         <div class="col-sm-3">
           <div class="card navbar-bg-color text-dark text-start rounded-0">
-            <div class="card-body"><a href="{% url 'dashboard' request.user.username %}"><img width="30px" src="{{user_profile.profileimg.url}}" alt="" class="mr-2 rounded-circle"><span
-                  class="card_font" style="text-transform: capitalize;">{{user.first_name}} {{user.last_name}}</span></a></div>
-            <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
-                  class="card_font">Arkadaşlar</span></a></div>
-            <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
-                  class="card_font">Gruplar</span></a></div>
-            <div class="card-body"><a href="#"><img width="30px" src="{% static 'Images/application.png' %}" alt="" class="mr-2"><span
-                  class="card_font">Ayarlar Ve Gizlilik</span></a></div>
+            <div class="card-body"><a href="{% url 'dashboard' request.user.username %}"> <button class="btn"><img width="30px" src="{{user_profile.profileimg.url}}" alt="" class="mr-2 rounded-circle"><span
+                  class="card_font" style="text-transform: capitalize;">{{user.first_name}} {{user.last_name}}</span></a></button></div>
+            <div class="card-body"><button class="btn" data-bs-toggle="modal" data-bs-target="#friendsModal"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
+                  class="card_font">Arkadaşlar</span></button></div>
+            <!-- <div class="card-body"><a href="#"><button class="btn"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-2"><span
+                  class="card_font">Gruplar</span></a></button></div> -->
+            <div class="dropdown card-body">
+              <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img width="30px" src="{% static 'Images/application.png' %}" alt="" class="mr-2">
+                <span class="card_font">Ayarlar Ve Gizlilik</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><button class="btn" data-bs-toggle="modal" data-bs-target="#accounteditModal"><a class="dropdown-item card_font" href="#">Kullanici Bilgilerini Guncelle</a></li>
+                <li><button class="btn" data-bs-toggle="modal" data-bs-target="#passwordeditModal"><a class="dropdown-item card_font" href="#">Sifre Degistir</a></button></li>
+                <!-- <li><button class="btn" data-bs-toggle="modal" data-bs-target="#DeleteAccountModal"><a class="dropdown-item card_font" href="#">Hesabi Kapat</a></button></li> -->
+              </ul>
+            </div>
+            <!-- <div class="card-body">
+              <a href="#">
+                <button class="btn">
+                  <img width="30px" src="{% static 'Images/application.png' %}" alt="" class="mr-2">
+                  <span class="card_font">Ayarlar Ve Gizlilik</span>
+                </a>
+              </button>
+            </div> -->
           </div>
         </div> <!-- COL-SM-3 END -->
         <div class="col-sm-6">
@@ -47,19 +67,23 @@
               <p class="p-font">{{post.caption}}</p>
             </div> <!-- CARD-BODY END -->
             <div class="card-footer list-group list-group-horizontal border-0 navbar-bg-color justify-content-center">
-              <div class="col-sm-2 list-group-item m-2 pb-3 p-0 border-0 navbar-bg-color"><a href="/like-post?post_id={{post.id}}"><i
-                    class="fa-regular fa-thumbs-up navbar-bg-color mr-1"></i><span class="card_font">Beğen</span></a></div>
+              <div class="col-sm-2 list-group-item m-2 pb-3 p-0 border-0 navbar-bg-color">
+                <a href="/like-post?post_id={{post.id}}">
+                  <i class="fa-regular fa-thumbs-up navbar-bg-color mr-1"></i>
+                  <span class="card_font">Beğen</span>
+                </a>
+              </div>
               <div class="col-sm-3 list-group-item m-2 pb-3 mx-0 p-0 border-0 navbar-bg-color">
                 <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#commentModal{{ post.id }}">
                   <i class="fa-regular fa-comment navbar-bg-color mr-1"></i>
                   <span class="card_font">Yorum Yap</span>
                 </button>
               </div>
-              <div class="col-sm-3 list-group-item m-2 pb-3 mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
+              <!-- <div class="col-sm-3 list-group-item m-2 pb-3 mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
                     class="fa-solid fa-retweet navbar-bg-color mr-1"></i><span class="card_font">Gönder</span></a></div>
               <div class="col-sm-2 list-group-item m-2 pb-3 mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
                     class="fa-regular fa-share-from-square navbar-bg-color mr-1"></i><span class="card_font">Paylaş</span></a>
-              </div>
+              </div> -->
             </div>
             {% if comment_post_list %}
             <div class="col-sm-12 card_font px-3 mt-3">
@@ -91,14 +115,17 @@
             <div class="card-footer list-group list-group-horizontal border-0 navbar-bg-color justify-content-center">
               <div class="col-sm-2 list-group-item  p-0 border-0 navbar-bg-color"><a href="/like-post?post_id={{post.id}}"><i
                     class="fa-regular fa-thumbs-up navbar-bg-color mr-1"></i><span class="card_font">Beğen</span></a></div>
-              <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><button data-bs-toggle="modal" data-bs-target="#commentModal{{ post.id }}"><i
-                    class="fa-regular fa-comment navbar-bg-color mr-1"></i><span class="card_font">Yorum Yap</span></button>
+              <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color">
+                <a href="#" data-bs-toggle="modal" data-bs-target="#commentModal{{ post.id }}">
+                  <i class="fa-regular fa-comment navbar-bg-color mr-1"></i>
+                  <span class="card_font">Yorum Yap</span>
+                </a>
               </div>
-              <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
+              <!-- <div class="col-sm-3 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
                     class="fa-solid fa-retweet navbar-bg-color mr-1"></i><span class="card_font">Gönder</span></a></div>
               <div class="col-sm-2 list-group-item  mx-0 p-0 border-0 navbar-bg-color"><a href="#"><i
                     class="fa-regular fa-share-from-square navbar-bg-color mr-1"></i><span class="card_font">Paylaş</span></a>
-              </div>
+              </div> -->
             </div>
 
             {% if comment_post_list %}
@@ -137,16 +164,6 @@
             </div>
             {% endfor %}
           </div> <!-- CARD END / KISILER --> 
-
-          <div class="card navbar-bg-color text-dark text-start rounded-0 mt-3">
-            <div class="card-body li_font"><b>Sohbet Grupları</b><a href="#"><i class="fa-solid fa-magnifying-glass float-end"></i></a></div>
-            <div class="card-body pt-0">
-              <a href="#">
-                <i class="fa-solid fa-plus mr-1 border border-black rounded rounded-circle p-1"></i>
-                <span class="card_font">Yeni Grup Kur</span>
-              </a>
-            </div>
-          </div> <!-- CARD END -->
         </div> <!-- COL-SM-3 END -->
       </div> <!-- ROW END -->
     </div> <!-- CONTAINER END -->
@@ -205,6 +222,123 @@
       </div>
     </div>
 {% endfor %}
+    <!-- FriendsModal -->
+    <div class="modal fade" id="friendsModal" tabindex="-1" aria-labelledby="friendsModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="friendsModalLabel">Arkadaşlar</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <ul class="list-group">
+                {% if user_following %}
+                {% for user in user_following %}
+                <a href="{% url 'dashboard' user %}"><li class="list-group-item rounded rounded-3 border-0 border-bottom mb-2">{{user}}</li></a>
+                {% endfor %}
+                {% else %}
+                  <h3>Hic Arkadasiniz Bulunmamaktadir.</h3>
+                {% endif %}
+                <!-- <li class="list-group-item">An item</li>
+                <li class="list-group-item">A second item</li>
+                <li class="list-group-item">A third item</li>
+                <li class="list-group-item">A fourth item</li>
+                <li class="list-group-item">And a fifth one</li> -->
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+            </div>
+        </div>
+      </div>
+    </div>
+    <!-- DeleteAccountModal
+    <div class="modal fade" id="DeleteAccountModal" tabindex="-1" aria-labelledby="DeleteAccountModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form action="/deleteaccount" method="POST">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="DeleteAccountModalLabel">Arkadaşlar</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>Hesabinizi Silmek İstediğinize Emin Misiniz ?</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+              <button type="submit" class="btn btn-danger" data-bs-dismiss="modal">Sil</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div> -->
+    <!-- AccountEditModal -->
+    <div class="modal fade" id="accounteditModal" tabindex="-1" aria-labelledby="accounteditModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="accounteditModalLabel">Post Düzenle</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form action="/editaccount" method="POST">
+              {% csrf_token %}
+              <div
+                  class="card text-dark text-start row list-group justify-content-center text-center border border-black rounded-0">
+                  <div class="card-body input-group m-3">
+                      <input name="username" type="text" class="form-control rounded-pill card_font"
+                          placeholder="Kullanici Adinizi Düzenleyin" aria-label="text" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="card-body input-group m-3">
+                    <input name="email" type="text" class="form-control rounded-pill card_font"
+                          placeholder="Emailinizi Düzenleyin" aria-label="text" aria-describedby="basic-addon1">
+                  </div>
+              </div> <!-- CARd END -->
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                <button type="submit" class="btn btn-primary">Kaydet</button>
+              </div>
+            </form> 
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- PasswordEditModal -->
+    <div class="modal fade" id="passwordeditModal" tabindex="-1" aria-labelledby="passwordeditModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="passwordeditModalLabel">Post Düzenle</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form action="/editpassword" method="POST">
+              {% csrf_token %}
+              <div
+                  class="card text-dark text-start row list-group justify-content-center text-center border border-black rounded-0">
+                  <div class="card-body input-group m-3">
+                      <input name="old_password" type="password" class="form-control rounded-pill card_font"
+                          placeholder="Eski Sifrenizi Girin." aria-label="text" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="card-body input-group m-3">
+                    <input name="password" type="password" class="form-control rounded-pill card_font"
+                          placeholder="Yeni Sifreniz" aria-label="text" aria-describedby="basic-addon1">
+                  </div>
+                  <div class="card-body input-group m-3">
+                    <input name="password2" type="password" class="form-control rounded-pill card_font"
+                          placeholder="Yeni Sifreniz Tekrar" aria-label="text" aria-describedby="basic-addon1">
+                  </div>
+              </div> <!-- CARd END -->
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
+                <button type="submit" class="btn btn-primary">Kaydet</button>
+              </div>
+            </form> 
+          </div>
+        </div>
+      </div>
+    </div>
 
 
   <script src="https://kit.fontawesome.com/03397e9a7e.js" crossorigin="anonymous"></script>
