--- a/templates/posts.html
+++ b/templates/posts.html
@@ -62,7 +62,6 @@
                     <strong>{{ comment.user.username }}:</strong> {{ comment.text }}
                   </div>
                   {% else %}
-                  <p>id uymadi</p>
                   {% endif %}
                   {% endfor %}
                 </div>
@@ -103,10 +102,13 @@
                 <div class="col-sm-12 card_font px-3 mt-3">
                   <h6>Yorumlar:</h6>
                   {% for comment in comment_post_list %}
+                  {% if comment.post.id == post.id %}
                   <div class="d-flex align-items-center mb-2">
                     <img width="20px" src="{{ comment.user.profileimg.url }}" alt="" class="mr-2">
                     <strong>{{ comment.user.username }}:</strong> {{ comment.text }}
                   </div>
+                  {% else %}
+                  {% endif %}
                   {% endfor %}
                 </div>
                 {% endif %}<!--CommentEnd-->
